--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "express-async-errors": "3.1.1",
+    "express-generator-typescript": "^2.2.6",
     "joi": "17.6.0",
-    "jsonwebtoken": "8.5.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "2.3.0"
   }
 }
